2003-06-22  Kevin Vandersloot

	* weather.c: work around weather.interceptvector problems to get the applet working again.
	Patch from Mark Foster. Closed bug #113981
	
	* gweather-applet.c: add some padding between the icon and label. ALso fix issue with
	setting tooltip.

2003-06-16  Kevin Vandersloot

	* gweather-pref.c, location.c, gweather-dialog.c: add back some accesibilty descriptions
	and stuff. Change Close to Ok for forecast dialog.

2003-06-15  Kevin Vandersloot

	* gweather-applet.c: keybindings for update and forecast.

2003-06-09  Kevin Vandersloot

	* gweather-applet.c: don't tranlsate the degree symbols. Fixes bug #95436.

2003-06-08  Kevin Vandersloot

	* gweather-applet.c: display F or C for temperatures. Fixes bug #95436

2003-06-05  Dennis Cranston <dennis_cranston at yahoo com>

	* gweather-pref.[ch]:  HIGify the location tab.
	
	* gweather-dialog.c:  HIGify the forecast dialog.
	
2003-06-02  Kevin Vandersloot

	* gweather-applet.c: small fix for packing

2003-06-01  Kevin Vandersloot

	* gweather_applet.c: Expand the applet for Fitt's law and pack widgets tighter on larger
	panels.

2003-05-31  Dennis Cranston <dennis_cranston at yahoo com>

	* gweather-pref.c:  Fix newly created mnemonic clash.

2003-05-31  Kevin Vandersloot

	* weather.c, gweather-applet.c: improve the animation a bit and display errors
	better

2003-05-31  Kevin Vandersloot

	* gweather-pref.c, gweather-applet.c: fix crash when toggling temp labels. 
	Also display temperature range for future days. Fixes bug #113783 and part
	of #113981

2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>

	* gweather-pref.c:  HIGify the action area of the preferences 
	dialog.

2003-05-15  Kevin Vandersloot <kfv101@psu.edu>

	* gweather-applet.c, gweather-pref.c: change wording for one of the prefs to make
	more understandable.

2003-05-14  Kevin Vandersloot <kfv101@psu.edu>

	* gweather-dialog.c: fix mispelling. Fixes bug #112970
