@@ -1,3 +1,9 @@
+Wed Jul 09 15:31:58 2003  George Lebl <jirka@5z.com>
+
+	* gweather-prefs.c: respect key writability, fix initial size so
+	  that all widgets will fit on screen, whack a whole bunch of
+	  useless gtk_widget_show's
+
 2003-06-22  Kevin Vandersloot
 
 	* weather.c: work around weather.interceptvector problems to get the applet working again.
